--- a/src/components/Checkbox/Checkbox.module.css
+++ b/src/components/Checkbox/Checkbox.module.css
@@ -1,5 +1,5 @@
 /* clear native styling */
-.sbui-checkbox[type='checkbox'] {
+.scx-checkbox[type='checkbox'] {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -22,11 +22,11 @@
   border-width: 1px;
 }
 
-.sbui-checkbox[type='checkbox']:checked {
+.scx-checkbox[type='checkbox']:checked {
   background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M12.207 4.793a1 1 0 010 1.414l-5 5a1 1 0 01-1.414 0l-2-2a1 1 0 011.414-1.414L6.5 9.086l4.293-4.293a1 1 0 011.414 0z'/%3e%3c/svg%3e");
 }
 
-.sbui-checkbox[type='checkbox']:checked {
+.scx-checkbox[type='checkbox']:checked {
   @apply dark:bg-brand-7;
   @apply bg-brand-7;
   border-color: transparent;
@@ -35,7 +35,7 @@
   background-repeat: no-repeat;
 }
 
-.sbui-checkbox {
+.scx-checkbox {
   @apply border border-solid rounded;
 
   @apply text-brand-7 border-gray-3 transition-all;
@@ -47,28 +47,28 @@
   margin-top: 2px;
 }
 
-.sbui-checkbox-container {
+.scx-checkbox-container {
   @apply flex cursor-pointer;
 }
 
-.sbui-checkbox__label-container {
+.scx-checkbox__label-container {
   @apply leading-none;
 }
 
-.sbui-checkbox__label-container__label {
+.scx-checkbox__label-container__label {
   @apply text-gray-7 dark:text-white cursor-pointer mt-0;
 }
 
-.sbui-checkbox__label-container__label__span {
+.scx-checkbox__label-container__label__span {
   @apply font-medium;
 }
 
-.sbui-checkbox__label-container__label__span .sbui-checkbox__label-text-before,
-.sbui-checkbox__label-container__label__span .sbui-checkbox__label-text-after {
+.scx-checkbox__label-container__label__span .scx-checkbox__label-text-before,
+.scx-checkbox__label-container__label__span .scx-checkbox__label-text-after {
   @apply text-gray-4 dark:text-gray-3;
 }
 
-.sbui-checkbox__label-container__label__p {
+.scx-checkbox__label-container__label__p {
   @apply mt-0 text-gray-4 dark:text-gray-3;
 }
 
@@ -76,29 +76,29 @@
   Label sizes
 */
 
-.sbui-checkbox-container--tiny .sbui-checkbox__label-container__label,
-.sbui-checkbox-container--tiny .sbui-checkbox__label-container__label__span,
-.sbui-checkbox-container--tiny .sbui-checkbox__label-container__label__p {
+.scx-checkbox-container--tiny .scx-checkbox__label-container__label,
+.scx-checkbox-container--tiny .scx-checkbox__label-container__label__span,
+.scx-checkbox-container--tiny .scx-checkbox__label-container__label__p {
   @apply text-xs;
 }
-.sbui-checkbox-container--small .sbui-checkbox__label-container__label,
-.sbui-checkbox-container--small .sbui-checkbox__label-container__label__span,
-.sbui-checkbox-container--small .sbui-checkbox__label-container__label__p {
+.scx-checkbox-container--small .scx-checkbox__label-container__label,
+.scx-checkbox-container--small .scx-checkbox__label-container__label__span,
+.scx-checkbox-container--small .scx-checkbox__label-container__label__p {
   @apply text-sm;
 }
-.sbui-checkbox-container--medium .sbui-checkbox__label-container__label,
-.sbui-checkbox-container--medium .sbui-checkbox__label-container__label__span,
-.sbui-checkbox-container--medium .sbui-checkbox__label-container__label__p {
+.scx-checkbox-container--medium .scx-checkbox__label-container__label,
+.scx-checkbox-container--medium .scx-checkbox__label-container__label__span,
+.scx-checkbox-container--medium .scx-checkbox__label-container__label__p {
   @apply text-sm;
 }
-.sbui-checkbox-container--large .sbui-checkbox__label-container__label,
-.sbui-checkbox-container--large .sbui-checkbox__label-container__label__span,
-.sbui-checkbox-container--large .sbui-checkbox__label-container__label__p {
+.scx-checkbox-container--large .scx-checkbox__label-container__label,
+.scx-checkbox-container--large .scx-checkbox__label-container__label__span,
+.scx-checkbox-container--large .scx-checkbox__label-container__label__p {
   @apply text-base;
 }
-.sbui-checkbox-container--xlarge .sbui-checkbox__label-container__label,
-.sbui-checkbox-container--xlarge .sbui-checkbox__label-container__label__span,
-.sbui-checkbox-container--xlarge .sbui-checkbox__label-container__label__p {
+.scx-checkbox-container--xlarge .scx-checkbox__label-container__label,
+.scx-checkbox-container--xlarge .scx-checkbox__label-container__label__span,
+.scx-checkbox-container--xlarge .scx-checkbox__label-container__label__p {
   @apply text-base;
 }
 
@@ -106,22 +106,22 @@
   Checkbox sizes
 */
 
-.sbui-checkbox-container--tiny .sbui-checkbox {
+.scx-checkbox-container--tiny .scx-checkbox {
   @apply h-3 w-3 mt-1 mr-3;
 }
 
-.sbui-checkbox-container--small .sbui-checkbox {
+.scx-checkbox-container--small .scx-checkbox {
   @apply h-3.5 w-3.5 mt-0.5 mr-3.5;
 }
 
-.sbui-checkbox-container--medium .sbui-checkbox {
+.scx-checkbox-container--medium .scx-checkbox {
   @apply h-4 w-4 mt-0.5 mr-3.5;
 }
 
-.sbui-checkbox-container--large .sbui-checkbox {
+.scx-checkbox-container--large .scx-checkbox {
   @apply h-5 w-5 mt-0.5 mr-4;
 }
 
-.sbui-checkbox-container--xlarge .sbui-checkbox {
+.scx-checkbox-container--xlarge .scx-checkbox {
   @apply h-5 w-5 mt-0.5 mr-4;
 }
