--- a/src/components/Loading/Loading.module.css
+++ b/src/components/Loading/Loading.module.css
@@ -1,15 +1,15 @@
-.sbui-loading {
+.scx-loading {
   @apply transition-all relative;
 }
 
-.sbui-loading--active {
+.scx-loading--active {
   opacity: 0.4;
 }
-.sbui-loading-content {
+.scx-loading-content {
   @apply transition-opacity duration-300;
 }
 
-.sbui-loading-spinner {
+.scx-loading-spinner {
   @apply text-brand-8 animate-spin;
   margin: auto;
   position: absolute;
