--- a/src/components/Typography/Text.module.css
+++ b/src/components/Typography/Text.module.css
@@ -1,37 +1,37 @@
-.sbui-typography-text {
+.scx-typography-text {
   @apply text-sm;
   @apply text-typography-body-light dark:text-typography-body-dark;
 }
 
-.sbui-typography-text-small {
+.scx-typography-text-small {
   @apply text-xs;
 }
-.sbui-typography-text--default {
+.scx-typography-text--default {
   @apply text-sm;
   @apply text-typography-body-light dark:text-typography-body-dark;
 }
 
-.sbui-typography-text--secondary {
+.scx-typography-text--secondary {
   @apply text-typography-body-secondary-light;
   @apply dark:text-typography-body-secondary-dark;
 }
 
-.sbui-typography-text--success {
+.scx-typography-text--success {
   @apply text-green-500;
   @apply dark:text-green-500;
 }
 
-.sbui-typography-text--warning {
+.scx-typography-text--warning {
   @apply text-yellow-500;
   @apply dark:text-yellow-500;
 }
 
-.sbui-typography-text--danger {
+.scx-typography-text--danger {
   @apply text-red-500;
   @apply dark:text-red-500;
 }
 
-.sbui-typography-text-disabled {
+.scx-typography-text-disabled {
   @apply text-gray-3;
   @apply dark:text-gray-4;
   /* color: rgba(0,0,0,.25); */
@@ -42,24 +42,24 @@
   user-select: none;
 }
 
-.sbui-typography-text-underline {
+.scx-typography-text-underline {
   @apply underline;
 }
 
-.sbui-typography-text-strikethrough {
+.scx-typography-text-strikethrough {
   @apply line-through;
 }
 
-.sbui-typography-text strong {
+.scx-typography-text strong {
   @apply text-sm;
 }
 
-mark.sbui-typography-text {
+mark.scx-typography-text {
   padding: 0;
   background-color: #ffe58f;
 }
 
-code.sbui-typography-text {
+code.scx-typography-text {
   /* margin: 0 .2em; */
   padding: 0.2em 0.4em 0.1em;
   /* font-size: 85%; */
@@ -68,7 +68,7 @@ code.sbui-typography-text {
   border-radius: 3px;
 }
 
-kbd.sbui-typography-text {
+kbd.scx-typography-text {
   /* margin: 0 .2em; */
   padding: 0.15em 0.4em 0.1em;
   /* font-size: 90%; */
