--- a/src/components/Alert/Alert.module.css
+++ b/src/components/Alert/Alert.module.css
@@ -1,63 +1,63 @@
-.sbui-alert-container {
+.scx-alert-container {
   @apply rounded-md p-4;
 }
 
-.sbui-alert-container--danger {
+.scx-alert-container--danger {
   @apply bg-red-600 bg-opacity-10 text-red-600;
 }
 
-.sbui-alert-container--warning {
+.scx-alert-container--warning {
   @apply bg-yellow-600 bg-opacity-10 text-yellow-600;
 }
 
-.sbui-alert-container--info {
+.scx-alert-container--info {
   @apply bg-blue-600 bg-opacity-10 text-blue-600;
 }
 
-.sbui-alert-container--success {
+.scx-alert-container--success {
   @apply bg-green-600 bg-opacity-10 text-green-600;
 }
 
-.sbui-alert-title {
+.scx-alert-title {
   @apply m-0 text-sm font-medium;
 }
 
-.sbui-alert-description {
+.scx-alert-description {
   @apply mt-2 text-sm;
 }
 
-.sbui-alert-description--danger {
+.scx-alert-description--danger {
   @apply text-red-500;
 }
 
-.sbui-alert-description--warning {
+.scx-alert-description--warning {
   @apply text-yellow-500;
 }
 
-.sbui-alert-description--info {
+.scx-alert-description--info {
   @apply text-blue-500;
 }
 
-.sbui-alert-description--success {
+.scx-alert-description--success {
   @apply text-green-500;
 }
 
-.sbui-close-button {
+.scx-close-button {
   @apply cursor-pointer inline-flex transition ease-in-out duration-200 bg-transparent border-transparent rounded-md p-1.5 focus:outline-none;
 }
 
-.sbui-close-button--success {
+.scx-close-button--success {
   @apply text-green-500 hover:bg-green-600 hover:bg-opacity-10;
 }
 
-.sbui-close-button--danger {
+.scx-close-button--danger {
   @apply text-red-500 hover:bg-red-600 hover:bg-opacity-10;
 }
 
-.sbui-close-button--warning {
+.scx-close-button--warning {
   @apply text-yellow-500 hover:bg-yellow-600 hover:bg-opacity-10;
 }
 
-.sbui-close-button--info {
+.scx-close-button--info {
   @apply text-blue-500 hover:bg-blue-600 hover:bg-opacity-10;
 }
