--- a/src/components/Auth/Auth.module.css
+++ b/src/components/Auth/Auth.module.css
@@ -1,7 +1,7 @@
-.sbui-auth {
+.scx-auth {
   width: 100%;
 }
 
-.sbui-auth-label {
+.scx-auth-label {
   @apply block text-sm text-gray-7 dark:text-gray-2 font-medium;
 }
