--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,27 +1,27 @@
-.sbui-btn-container {
+.scx-btn-container {
   @apply inline-flex font-medium;
 }
 
-.sbui-btn {
+.scx-btn {
   @apply relative cursor-pointer inline-flex items-center space-x-2 text-center border border-solid border-transparent transition ease-out duration-200 outline-none;
   @apply rounded;
   font-family: inherit;
   font-weight: inherit;
 }
 
-.sbui-btn:focus {
+.scx-btn:focus {
   @apply outline-none;
 }
 
-.sbui-btn-container--shadow {
+.scx-btn-container--shadow {
   box-shadow: 0 2px 0 rgba(0, 0, 0, 0.045);
 }
 
-.sbui-btn--w-full {
+.scx-btn--w-full {
   @apply w-full flex items-center justify-center;
 }
 
-.sbui-btn:disabled {
+.scx-btn:disabled {
   @apply opacity-75 cursor-not-allowed;
   pointer-events: none;
 }
@@ -30,91 +30,90 @@
   Button sizes
 */
 
-.sbui-btn--tiny {
+.scx-btn--tiny {
   @apply px-2.5 py-1.5 text-xs;
 }
-.sbui-btn--small {
+.scx-btn--small {
   @apply px-3 py-2 text-sm leading-4;
 }
-.sbui-btn--medium {
+.scx-btn--medium {
   @apply px-4 py-2 text-sm;
 }
-.sbui-btn--large {
+.scx-btn--large {
   @apply px-4 py-2 text-base;
 }
-.sbui-btn--xlarge {
+.scx-btn--xlarge {
   @apply px-6 py-3 text-base;
 }
 
 /*
   Button varients
 */
-.sbui-btn-primary {
-  @apply text-white bg-brand-8 hover:bg-brand-6;
-  @apply dark:hover:bg-brand-9;
+.scx-btn-primary {
+  @apply text-gray-9 bg-brand-8/80 hover:bg-brand-7;
+  @apply dark:text-gray-1 bg-brand-7/80 dark:hover:bg-brand-8;
 }
-.dark .sbui-btn-primary {
+.dark .scx-btn-primary {
   text-shadow: 0px 0px 4px rgba(38 111 78 / 50%);
 }
 
-.sbui-btn-default {
-  @apply text-gray-5 bg-white border-gray-2 hover:text-gray-6;
-  @apply hover:bg-white hover:border-gray-2;
+.scx-btn-default {
+  @apply text-gray-5 bg-gray-1 border-gray-2 hover:text-gray-6;
+  @apply hover:bg-grayA-1 hover:border-grayA-2;
   @apply dark:border-gray-6 dark:bg-gray-6 dark:text-dark-2;
-  @apply dark:hover:bg-gray-7;
+  @apply dark:hover:bg-grayA-6 hover:border-grayA-6;
 }
-.dark .sbui-btn-default {
+.dark .scx-btn-default {
   text-shadow: 0px 0px 4px rgba(31 31 31 / 50%);
 }
 
-.sbui-btn-secondary {
+.scx-btn-secondary {
   @apply text-gray-6 bg-gray-2;
   @apply hover:text-gray-7 hover:bg-gray-3;
 
   @apply dark:text-gray-3 dark:bg-gray-5;
   @apply dark:hover:bg-gray-6;
 }
-.dark .sbui-btn-secondary {
+.dark .scx-btn-secondary {
   text-shadow: 0px 0px 4px rgba(42 42 42 / 50%);
 }
 
-.sbui-btn-outline {
+.scx-btn-outline {
   @apply border text-gray-5 bg-transparent border-gray-2 border-solid hover:bg-white hover:text-gray-6 hover:border-gray-6 dark:text-white dark:border-dark-4 dark:hover:text-dark-6 dark:hover:border-white;
 }
-.sbui-btn-dashed {
+.scx-btn-dashed {
   @apply border text-gray-5 bg-transparent border-gray-2 border-dashed hover:text-gray-6 hover:border-gray-6;
   @apply dark:text-white dark:border-dark-4 dark:hover:text-white dark:hover:border-white;
 }
-.sbui-btn-link {
+.scx-btn-link {
   @apply bg-transparent text-brand-8 hover:bg-brand-9 hover:bg-opacity-25;
   box-shadow: none;
 }
-.sbui-btn-text {
+.scx-btn-text {
   @apply text-gray-4 bg-transparent hover:bg-gray-2 hover:bg-opacity-25;
   @apply dark:text-dark-3 dark:hover:bg-dark-6;
   box-shadow: none;
 }
 
-.sbui-btn--danger {
+.scx-btn--danger {
   @apply border-red-500 text-red-500;
   @apply dark:border-red-500 dark:text-red-500;
 }
 
-.dark .sbui-btn--danger {
+.dark .scx-btn--danger {
   text-shadow: 0px 0px 4px rgba(229, 62, 62 / 50%);
 }
 
-.sbui-btn-primary.sbui-btn--danger {
-  @apply bg-red-500 text-white;
-  @apply hover:bg-red-600 hover:border-red-600;
+.scx-btn-primary.scx-btn--danger {
+  @apply text-gray-9 bg-brand-8/80;
 }
-.sbui-btn-default.sbui-btn--danger,
-.sbui-btn-secondary.sbui-btn--danger,
-.sbui-btn-outline.sbui-btn--danger,
-.sbui-btn-dashed.sbui-btn--danger,
-.sbui-btn-link.sbui-btn--danger,
-.sbui-btn-text.sbui-btn--danger {
-  @apply hover:bg-red-600 hover:text-white hover:border-red-600;
+.scx-btn-default.scx-btn--danger,
+.scx-btn-secondary.scx-btn--danger,
+.scx-btn-outline.scx-btn--danger,
+.scx-btn-dashed.scx-btn--danger,
+.scx-btn-link.scx-btn--danger,
+.scx-btn-text.scx-btn--danger {
+  @apply hover:bg-brand-8/80 hover:text-white hover:bg-brand-6;
 }
 /* {
   @apply hover:bg-red-600 hover:text-white hover:border-red-600;
@@ -123,7 +122,7 @@
 /*
   Animation for icon
 */
-.sbui-btn--anim--spin {
+.scx-btn--anim--spin {
   @apply stroke-current;
   animation-name: spin;
   animation-duration: 1500ms;
@@ -145,7 +144,7 @@
   }
 }
 
-.sbui-btn-loader--center {
+.scx-btn-loader--center {
   position: absolute;
 
   top: 50%;
@@ -159,18 +158,18 @@
   height: inherit;
 }
 
-.sbui-btn--text-fade-out span {
+.scx-btn--text-fade-out span {
   @apply opacity-0;
 }
 
-.sbui-btn--text-align-left {
+.scx-btn--text-align-left {
   @apply justify-start;
 }
 
-.sbui-btn--text-align-right {
+.scx-btn--text-align-right {
   @apply justify-end;
 }
 
-.sbui-btn--text-align-center {
+.scx-btn--text-align-center {
   @apply justify-center;
 }
