--- a/src/components/Typography/Link.module.css
+++ b/src/components/Typography/Link.module.css
@@ -1,7 +1,7 @@
-a.sbui-typography-link {
+a.scx-typography-link {
   @apply text-sm text-brand-7 dark:text-brand-7 cursor-pointer;
 }
-.sbui-typography {
+.scx-typography {
   @apply text-base;
   @apply text-gray-4;
 }
