--- a/src/components/Typography/Title.module.css
+++ b/src/components/Typography/Title.module.css
@@ -1,25 +1,25 @@
-.sbui-typography-title {
+.scx-typography-title {
   @apply text-gray-9;
   @apply dark:text-white;
 }
 
-h1.sbui-typography-title {
+h1.scx-typography-title {
   @apply text-5xl;
 }
 
-h2.sbui-typography-title {
+h2.scx-typography-title {
   @apply text-4xl;
 }
 
-h3.sbui-typography-title {
+h3.scx-typography-title {
   @apply text-2xl;
 }
 
-h4.sbui-typography-title {
+h4.scx-typography-title {
   @apply text-lg;
 }
 
-h5.sbui-typography-title {
+h5.scx-typography-title {
   @apply text-base;
 }
 /* a {
